fix styling for images on mobile

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -411,7 +411,7 @@ mark,
   .blockquote-footer::before {
     content: "\2014\00A0"; }
 
-.img-fluid {
+.img-fluid, img {
   max-width: 100%;
   height: auto; }
 
@@ -5173,7 +5173,7 @@ section:last-child {
       color: #dee2e6; }
   .post-list .teaser-image {
     width: 30%; }
-  .post-list .img-fluid {
+  .post-list .img-fluid, .post-list img {
     margin-bottom: 0; }
   .post-list .article-teaser {
     width: 70%;
