--- a/themes/travel-blog/src/scss/components/_images.scss
+++ b/themes/travel-blog/src/scss/components/_images.scss
@@ -2,3 +2,7 @@
   border: 1px solid $secondary;
   padding: 5px;
 }
+
+img {
+  @extend .img-fluid;
+}
